samples/_failures_safe/1761319354_024deb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6406ba64.c: In function ‘main’:
./samples/SAFE/__tmp_6406ba64.c:123:13: error: expected declaration or statement at end of input
  123 |             line[len - 1] = '\0';
      |             ^~~~
./samples/SAFE/__tmp_6406ba64.c:123:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6406ba64.c:123:13: error: expected declaration or statement at end of input
